--- a/package.json
+++ b/package.json
@@ -27,9 +27,13 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.475.0",
+    "masonic": "^4.0.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1",
+    "react-responsive-masonry": "^2.7.1",
     "react-router-dom": "^7.1.5",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
