--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.3",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.475.0",
     "masonic": "^4.0.1",
     "next-themes": "^0.4.4",
