--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-intersection-observer": "^9.15.1",
     "react-responsive-masonry": "^2.7.1",
     "react-router-dom": "^7.1.5",
+    "sweetalert2": "^11.17.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "typed.js": "^2.1.0"
